2004-06-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b224

	* Change: Update the check.inc messages to reflect the 'php_value' 
	  error correctly, instead of saying that it's a mod_rewrite error.

2004-06-27  Jens Tkotz <jens@peino.de> 1.4.4-cvs-b223

	* Fix: Mambo (Form) Photo-Upload was broken, because we loaded the popup without be called
	       through Mambo. So Mambo-Information were lost.
	       Infos are now stored in session when calling makeGalleryUrl with option popup.
	       Those infos are erased when Gallery is loaded "normal" the next time.

	* Fix: Gallery didnt recognized logout from Mambo.

	* New: Add Text in configwizard to remind user to switch off Debug Mode

2004-06-26  Andrew Lindeman <joyoflinux@yahoo.com> 1.4.4-cvs-b222

	* Change: Don't have gallery_mail() print out the email even when
	  we're in debug mode.  This can cause unintended security issues.

2004-06-26  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b221

	* Change:  Dumbest bug evar!  Don't re-initialize $albumDB on every call
	  to a recursive-calling function.  It's slower than you can possibly imagine.

2004-06-26  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b220

	* Change:  "!isset($page)" to "empty($page)"
	  http://gallery.menalto.com/index.php?name=PNphpBB2&file=viewtopic&p=81113#81113

2004-06-25  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b219

	* Change: sessions - phpNuke requires session_start(), postNuke errors
	  on it.  Check...

	* Change: Match casing on 'configuration wizard' for admin links

2004-06-25  Jens Tkotz <jens@peino.de> 1.4.4-cvs-b218

	* Change: A litte less tables in view_album and some minor changes for layout of caption

2004-06-25  Jens Tkotz <jens@peino.de> 1.4.4-cvs-b217

	* Fix: Gallery didnt recognized a log out from GeekLog

2004-06-25  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b216

	* Add: Random Block - added and updated to use our save serialization
	  functions
