@@ -1,3 +1,9 @@
+2004-06-28  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b225
+
+	* Change: view_album optimization for large albums by Mark Curly from
+	  gallery-devel.  I've tested this, but it will need a real good look
+	  during code freeze and RC.
+
 2004-06-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b224
 
 	* Change: Update the check.inc messages to reflect the 'php_value' 
